--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     // IMPORTANT: This key should NEVER be exposed in production.
     // It should be kept on the backend to avoid abuse and quota limits.
     // This key is exposed here ONLY for demonstration purposes and uses a free account with rate limiting.
-    // Please do NOT abuse it.
+    // Please do NOT abuse it — get your own key at locationiq.com and do not use this one.
     const locationiqKey = "pk.941791e42cbab69fbaf845b29cfcef8c";
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
